<resources>
    <string name="app_name">Odsen</string>

    <!--  Alle tekstverdier til Main / hoved siden  -->
    <string name="MAIN_welcome">Velkommen til Odsen</string>
    <string name="MAIN_logged_inn_as">Du er logget inn som %s</string>
    <string name="MAIN_go_to_open_room">Gå til et åpent rom du er med i</string>
    <string name="MAIN_find_friends">Finn flere venner å konkurere med</string>
    <string name="MAIN_create_rom">Lag et nytt rom å spille i</string>
    <string name="MAIN_closed_rooms">Finn et tidligere avsluttet rom</string>
    <string name="MAIN_logg_out">Logg ut</string>

    <!--  Alle tekstverdier til Create Room  -->
    <string name="CREATE_hint_name_of_room">Navn på rommet</string>
    <string name="CREATE_add_frineds"><b>Legg til venner</b></string>
    <string name="CREATE_friend_list_placeholder">Venner du legger til kommer her</string>
    <string name="CREATE_win_condition_challenges">Første til et antall utfordringer</string>
    <string name="CREATE_win_condition_time">Den som leder etter tid</string>
    <string name="CREATE_add_challenge_placeholder"><b>Legg til utfordringer her</b></string>
    <string name="CREATE_submit_room">Opprett rommet</string>
    <string name="CREATE_hint_add_win_condition">Velg hvordan rommet skal avsluttes</string>
    <string name="CREATE_end_room_by_date">Rommet er åpent fram til %1$d. %2$d. %3$d</string>
    <string name="CREATE_end_room_by_challenges">Rommet er åpent fram til %d utfordringer er utført</string>

    <!--  Alle tekstverdier for Find Frineds  -->
    <string name="FRIENDS_title"><big>Venner</big></string>
    <string name="FRIENDS_add_friends_username_hint">Legg til venner via brukernavn</string>
    <string name="FRIENDS_add_friends_QR_code">Legg til venner via QR kode</string>
    <string name="FRIENDS_new_friend_requests">Du har nye venneforespørsler</string>


    <!--  Alle tekstverdier for liste åpne rom  -->
    <string name="OPEN_ROOMS_title"><big>Du er med i %d rom</big></string>
    <string name="OPEN_ROOMS_title_no_rooms"><big>Du er ikke med i noen rom end</big></string>
    <string name="OPEN_ROOMS_filter_after_number_of_members">Antall deltakere</string>
    <string name="OPEN_ROOMS_filter_after_user">Bruker du \nvil ha med</string>
    <string name="OPEN_ROOMS_filter_after_challenges">Gjennværende \nutfordringer</string>


    <!--  Alle tekstverdier for et åpent rom  -->
    <string name="ACTIVE_ROOM_title">%s</string>
    <string name="ACTIVE_ROOM_close_room">Avslutt rommet</string>
    <string name="ACTIVE_ROOM_add_challenge">Legg til en utfordring</string>
    <string name="ACTIVE_ROOM_TOAST_room_finished">Rommet har blitt avsluttet</string>


    <!--  Generelt  -->
    <string name="GENERAL_submit_dialog">OK</string>
    <string name="GENERAL_cancel_dialog">Avbryt</string>

</resources>