<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateRoom">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/CREATE_vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <EditText
        android:id="@+id/CREATE_name_of_room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/CREATE_hint_name_of_room"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/CREATE_add_friends"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/CREATE_add_friends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/CREATE_add_frineds"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CREATE_name_of_room" />

    <ScrollView
        android:id="@+id/CREATE_added_friends_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/CREATE_add_friends"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/CREATE_friends_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">


        </LinearLayout>

    </ScrollView>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/CREATE_vertical_guideline"
        app:layout_constraintTop_toBottomOf="@+id/CREATE_added_friends_scroll"
        app:layout_constraintVertical_bias="0.85">

        <RadioButton
            android:id="@+id/CREATE_radio_challenges"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CREATE_win_condition_challenges" />

        <RadioButton
            android:id="@+id/CREATE_radio_time"
            android:layout_width="197dp"
            android:layout_height="wrap_content"
            android:text="@string/CREATE_win_condition_time" />

    </RadioGroup>

    <EditText
        android:id="@+id/CREATE_add_challenge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/CREATE_add_challenge_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/CREATE_vertical_guideline" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/CREATE_submit_room"
        app:layout_constraintTop_toBottomOf="@+id/CREATE_add_challenge"
        tools:layout_editor_absoluteX="-16dp" >

        <LinearLayout
            android:id="@+id/CREATE_challenge_holder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/CREATE_submit_room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CREATE_submit_room"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>