<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FindFriends">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/FRIENDS_guid_line_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/FRIENDS_guid_line_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />



    <TextView
        android:id="@+id/FRIENDS_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/FRIENDS_title"
        android:textSize="25dp"
        android:inputType="text"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/FRIENDS_add_with_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/FRIENDS_add_friends_username_hint"
        android:gravity="center_horizontal"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FRIENDS_title" />

    <ImageView
        android:id="@+id/FRIENDS_qr_code_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintBottom_toTopOf="@+id/FRIENDS_guid_line_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FRIENDS_add_with_user_name"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/FRIENDS_add_with_qr_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/FRIENDS_add_friends_QR_code"
        app:layout_constraintBottom_toTopOf="@+id/FRIENDS_guid_line_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FRIENDS_qr_code_placeholder" />

    <TextView
        android:id="@+id/FRIENDS_new_friend_requests"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/FRIENDS_new_friend_requests"
        app:layout_constraintEnd_toStartOf="@+id/FRIENDS_guid_line_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/FRIENDS_guid_line_horizontal" />

    <ScrollView
        android:id="@+id/FRIENDS_friends_scroller"
        android:layout_height="wrap_content"
        android:layout_width="175dp"
        app:layout_constraintEnd_toEndOf="@+id/FRIENDS_guid_line_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/FRIENDS_new_friend_requests"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/FRIENDS_friends_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical" />

    </ScrollView>

    <TextView
        android:id="@+id/FRIENDS_sent_friend_requests_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/FRIENDS_guid_line_vertical"
        app:layout_constraintTop_toTopOf="@+id/FRIENDS_guid_line_horizontal" />

    <ScrollView
        android:id="@+id/FRIENDS_sent_friend_requests"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/FRIENDS_guid_line_vertical"
        app:layout_constraintTop_toTopOf="@+id/FRIENDS_guid_line_horizontal">

        <LinearLayout
            android:id="@+id/FRIENDS_friend_request_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical" />

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>